Implement batched rendering, remove stroke from rects, correct canvas scaling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1 id="message"></h1>
-<canvas id="canvas"></canvas>
+<canvas id="canvas" width="1280" height="720"></canvas>
 
 </body>
 <script src="src/app.js"></script>
