AABB collision detection

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1 id="message"></h1>
 <canvas id="canvas" width="1280" height="720"></canvas>
+<canvas id="preload" width="1280" height="720"></canvas>
 
 </body>
 <script src="src/app.js"></script>
