Player facing sprites and goal triggers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1 id="message"></h1>
+<div id="debug"></div>
 <canvas id="canvas" width="1280" height="720"></canvas>
 <canvas id="preload" width="1280" height="720"></canvas>
 
