--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <h1 id="message"></h1>
-<div id="debug"></div>
+<div id="debug">
+    Currently equipped: <span id="weapon"></span><br/>
+    HP: <span id="hp"></span>/10
+</div>
 <canvas id="canvas" width="1280" height="720"></canvas>
 <canvas id="preload" width="1280" height="720"></canvas>
 
