Robotguard, swarm/group mechanics,death animation and game over

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1 id="message"></h1>
 <div id="debug">
+    Position: <span id="pixelpos"></span> (<span id="tilepos"></span>)<br/>
     Currently equipped: <span id="weapon"></span><br/>
     HP: <span id="hp"></span>/10
 </div>
